lintian (2.5.38) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/obsolete-sites.pm:
    + [AB] Stop at <>, $, or " when emitting URLs as tag parameter.

  * data/obsolete-sites/obsolete-sites:
    + [AB] Add patch by Hideki Yamane to add sourceforge.jp (Closes:
      #798736)
    + [AB] Sort file alphabetically.

 -- Niels Thykier <niels@thykier.net>  Fri, 11 Sep 2015 16:51:26 +0200

lintian (2.5.37) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - obsolete-url-in-packaging
      - renamed-tag

  * checks/application-not-library.{desc,pm}:
    + [AB] Downgrade libapp-perl-package-name to certainty possible.
    + [AB] Add libapp-options-perl to the package whitelist.
  * checks/binaries.pm:
    + [NT] Apply patch from Michael Stapelberg to ignore
      "no-relro" and "no-fortify-functions" issues in
      binaries built by the go compiler, as it does not
      support these features.  (Closes: #795667)
    + [NT] Apply patch from Michael Stapelberg to a
      common false positive spelling mistake in "go"
      binaries.  (Closes: #795614)
    + [NT] Apply patch from Guillem Jover to avoid some false
      positive  shared-lib-without-dependency-information tags.
      (Closes: #798063)
  * checks/control-file.pm:
    + [AB] Apply patch by Christoph Biedl for relaxing dependency checks
      to allow versions with tilde. (Closes: #797951)
  * checks/copyright.pm:
    + [BR] Fix FP for copyright-without-copyright-notice tag
      allow public-domain.  (Closes: #786867)
  * checks/cruft.pm:
    + [BR] Fix complex regular subexpression recursion limit.
      Strip comments is only done on first 8192 characters.
      (Closes: #795955).
    + [BR] Performance improvement check if line < 1024 before
      stripping comment. Classify to minified if line > 1024.
    + [BR] Fix false positive in missing-sources directory
      search path.
  * checks/debhelper.pm: