@@ -46,6 +46,8 @@ bar etc/opt
 bar var/cache/pbuilder/build
 bar var/lib/sbuild
 bar var/lib/buildd
+bar build/dir/foo
+bar tmp/buildd/dir/foo
 bar etc/dhcp3
 
 Bar.pm usr/lib/perl5/Foo
