@@ -1,6 +1,17 @@
 E: files-foo-in-bar: dir-in-usr-local usr/local/foo/
+E: files-foo-in-bar: dir-or-file-in-build-tree build/
+E: files-foo-in-bar: dir-or-file-in-build-tree build/dir/
+E: files-foo-in-bar: dir-or-file-in-build-tree build/dir/foo/
+E: files-foo-in-bar: dir-or-file-in-build-tree build/dir/foo/bar
+E: files-foo-in-bar: dir-or-file-in-build-tree tmp/buildd/
+E: files-foo-in-bar: dir-or-file-in-build-tree tmp/buildd/dir/
+E: files-foo-in-bar: dir-or-file-in-build-tree tmp/buildd/dir/foo/
+E: files-foo-in-bar: dir-or-file-in-build-tree tmp/buildd/dir/foo/bar
+E: files-foo-in-bar: dir-or-file-in-build-tree var/cache/pbuilder/build/
 E: files-foo-in-bar: dir-or-file-in-build-tree var/cache/pbuilder/build/bar
+E: files-foo-in-bar: dir-or-file-in-build-tree var/lib/buildd/
 E: files-foo-in-bar: dir-or-file-in-build-tree var/lib/buildd/bar
+E: files-foo-in-bar: dir-or-file-in-build-tree var/lib/sbuild/
 E: files-foo-in-bar: dir-or-file-in-build-tree var/lib/sbuild/bar
 E: files-foo-in-bar: dir-or-file-in-etc-opt etc/opt/bar
 E: files-foo-in-bar: dir-or-file-in-home home/johndoe/
