@@ -2,6 +2,9 @@ lintian (2.5.38) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/files.pm:
+    + [AB] Apply patch by Mattia Rizzolo to also check for files in /build
+      and /tmp/buildd in dir-or-file-in-build-tree.  (Closes: #797532)
   * checks/obsolete-sites.pm:
     + [AB] Stop at <>, $, or " when emitting URLs as tag parameter.
 
